bug fixes
- fixed overflowing text in mobile view
- added footer with links to original repo
- replaced fontawesome with lucide icon

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -54,6 +54,19 @@ html, body {
     font-weight: 300;
     font-size: 1rem;
     line-height: 1.6;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    word-break: break-word;
+}
+
+.note-content pre {
+    white-space: pre-wrap;
+    max-width: 100%;
+}
+
+.note-content img {
+    max-width: 100%;
+    height: auto;
 }
 
 @media (max-width: 1024px) {
